# universal-neural-network-computing-accelerator

./: .gitignore  CMakeLists.txt  README.md  deploy.sh
client/: client.c
config/: config.ini
models/: rknn.weights
proto/: api.proto  build-proto.sh
server/: CMakeLists.txt  accelerator-client.c  accelerator-server.c  api.pb-c.c  api.pb-c.h  clog.c  clog.h  detector.c  detector.h  server.c
src/: accelerator-client.c  accelerator-server.c  api.pb-c.c  api.pb-c.h  client.c  client.h  config.h  detector.h  heartbeat_timer.c  heartbeat_timer.h  server.c  server.h  threadpool.c  threadpool.h  utils.c  utils.h
